# pe-demo-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: agents.py  config.py  extraction.py  main.py
frontend/: bun.lockb
frontend/src/lib/: Dropzone.svelte
frontend/src/routes/: +page.svelte
memory/: MEMORY.md
tests/: test_agents.py  test_config.py  test_extraction.py  test_main.py
tests/fixtures/: sample.txt
